# chmy

ex1/: .gitignore  CMakeLists.txt  SLAU_var_2.csv  decomposition.hpp  main.cpp  matrix.hpp  reader.hpp  report.tex  solver.hpp
